<<<<<<< HEAD
<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="portfolio_title">Ahmed\'s Nanodegree Apps!</string>
    <string name="btnBuildIt">Build It Bigger</string>
    <string name="btnCapstone">Capstone: My Own App</string>
    <string name="btnInsar">INSAR</string>
    <string name="btnPopularMoviesI">Popular Movies I</string>
    <string name="btnPopularMoviesII">Popular Movies II</string>
    <string name="btnBakingRecipes">Baking Recipes</string>
    <string name="btnAppMaterial">Make App Material</string>
</resources>
||||||| merged common ancestors
=======
<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="portfolio_title">Ahmed\'s Nanodegree Apps!</string>
    <string name="btnSpotify">SPOTIFY STREAMER</string>
    <string name="btnScore">SCORE APP</string>
    <string name="btnLibrary">LIBRARY APP</string>
    <string name="btnBuildIt">BUILD IT BIGGER</string>
    <string name="btnBacon">XYZ READER</string>
    <string name="btnCapstone">CAPSTONE: MY OWN APP</string>
</resources>
>>>>>>> b9a52201ca82a1c9b6b55af74c64633fc5c3d7e0
